--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <title>index.knit</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/united.min.css" rel="stylesheet" />
@@ -57,6 +57,7 @@ if (window.hljs) {
 
 
 
+
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
 
@@ -81,6 +82,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -233,7 +237,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -242,47 +246,11 @@ $(document).ready(function () {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-    Materiály k přednáškám
-     
-    <span class="caret"></span>
-  </a>
-  <ul class="dropdown-menu" role="menu">
-    <li>
-      <a href="01_intro_R.html">Představení R</a>
-    </li>
-    <li>
-      <a href="02_install_R.html">Instalace R, R studia a tidyverse</a>
-    </li>
-    <li>
-      <a href="03_objects_functions.html">Objekty, proměnné a funkce</a>
-    </li>
-    <li>
-      <a href="04_import_export.html">Import a export dat</a>
-    </li>
-    <li>
-      <a href="05_dataframe_manipulation.html">Prohlížení a manipulce s dataframem</a>
-    </li>
-    <li>
-      <a href="06_variables_mutate_summarise.html">Manipulace a sumarizace proměnných</a>
-    </li>
-    <li>
-      <a href="07_factors.html">Práce s faktory</a>
-    </li>
-    <li>
-      <a href="08_data_visualization.html">Vytváření grafů</a>
-    </li>
-    <li>
-      <a href="09_plot_format.html">Vzhled grafů</a>
-    </li>
-    <li>
-      <a href="10_strings.html">Práce se stringy</a>
-    </li>
-  </ul>
+        <li>
+  <a href="https://sociology-fa-cu.github.io/uvod-do-r-kniha/">Materiály k přednáškám</a>
 </li>
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Domácí úkoly
      
     <span class="caret"></span>
@@ -342,17 +310,36 @@ $(document).ready(function () {
 </div>
 
 
-<div id="section" class="section level2">
-<h2>—</h2>
-</div>
 <div id="anotace-kurzu" class="section level2">
 <h2>Anotace kurzu</h2>
-<p><strong>Katedra sociologie Filozofické fakulty Univerzity Karlovy</strong></p>
-<p><strong>Vyučující</strong>: Mgr. Jaromír Mazák, Ph.D., Mgr. Aleš Vomáčka</p>
-<p>Kurz je úvodem do programovacího jazyka R vyvinutého pro statistickou analýzu dat. V kurzu není předpokládána předchozí znalost jazyka R, ale podmínkou je základní znalost statistiky a výhodou jsou předchozí zkušenosti s analýzou dat. Minimálním vstupním předpokladem pro je absolvování kurzů prvního ročníku Statistika 1 (ASG100117), Seminář ke statistice 1 (ASG100118) a doporučujeme si ho tedy nechat nejdříve do 2. ročníku bakalářského studia.</p>
-<p>V kurzu vycházíme z moderního přístupu k analýze dat v R pomocí vývojového prostředí R Studio a “gramatiky” Tidyverse. Tento přístup dnes mezi uživatelskou komunitou pravděpodobně převažuje.</p>
-<p>Učit se R je běh na dlouhou trať. Je to cesta, která znamená mnohem větší časovou investici než zvládnutí softwaru s GUI, jako je například SPSS. Odměnou je mnohem větší flexibilita a v ruce univerzální nástroj pro zpracování dat, analýzu, vizualizaci, ale i programování a automatizaci. Přestože v kurzu se tak daleko nedostaneme, v R je dnes díky dostupným knihovnám a nástrojům možné vytvářet také interaktivní grafické aplikace, webové stránky (tato webová stránka byla vytvořena v R), prezentace a kromě standardní statistické analýzy jsou dostupné také nástroje tzv. strojového učení. Tento kurz má smysl především pro ty studenty, kteří se chtějí ve své sociologické dráze zaměřovat kvantitativně a kteří jsou připraveni k samostudiu a dalšímu rozvoji skromných základů, které jim kurz nabídne.</p>
-<p>Účast na výuce předpokládá vlastní notebook s připojením k internetu.</p>
+<p><strong>Katedra sociologie Filozofické fakulty Univerzity
+Karlovy</strong></p>
+<p><strong>Vyučující</strong>: Mgr. Jaromír Mazák, Ph.D., Mgr. Aleš
+Vomáčka</p>
+<p>Kurz je úvodem do programovacího jazyka R vyvinutého pro statistickou
+analýzu dat. V kurzu není předpokládána předchozí znalost jazyka R, ale
+podmínkou je základní znalost statistiky a výhodou jsou předchozí
+zkušenosti s analýzou dat. Minimálním vstupním předpokladem pro je
+absolvování kurzů prvního ročníku Statistika 1 (ASG100117), Seminář ke
+statistice 1 (ASG100118) a doporučujeme si ho tedy nechat nejdříve do 2.
+ročníku bakalářského studia.</p>
+<p>V kurzu vycházíme z moderního přístupu k analýze dat v R pomocí
+vývojového prostředí R Studio a “gramatiky” Tidyverse. Tento přístup
+dnes mezi uživatelskou komunitou pravděpodobně převažuje.</p>
+<p>Učit se R je běh na dlouhou trať. Je to cesta, která znamená mnohem
+větší časovou investici než zvládnutí softwaru s GUI, jako je například
+SPSS. Odměnou je mnohem větší flexibilita a v ruce univerzální nástroj
+pro zpracování dat, analýzu, vizualizaci, ale i programování a
+automatizaci. Přestože v kurzu se tak daleko nedostaneme, v R je dnes
+díky dostupným knihovnám a nástrojům možné vytvářet také interaktivní
+grafické aplikace, webové stránky (tato webová stránka byla vytvořena v
+R), prezentace a kromě standardní statistické analýzy jsou dostupné také
+nástroje tzv. strojového učení. Tento kurz má smysl především pro ty
+studenty, kteří se chtějí ve své sociologické dráze zaměřovat
+kvantitativně a kteří jsou připraveni k samostudiu a dalšímu rozvoji
+skromných základů, které jim kurz nabídne.</p>
+<p>Účast na výuce předpokládá vlastní notebook s připojením k
+internetu.</p>
 </div>
 
 
