--- a/literature.html
+++ b/literature.html
@@ -13,7 +13,7 @@
 
 <title>Doporučená literatura</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/united.min.css" rel="stylesheet" />
@@ -57,6 +57,7 @@ if (window.hljs) {
 
 
 
+
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
 
@@ -81,6 +82,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -233,7 +237,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -242,47 +246,11 @@ $(document).ready(function () {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-    Materiály k přednáškám
-     
-    <span class="caret"></span>
-  </a>
-  <ul class="dropdown-menu" role="menu">
-    <li>
-      <a href="01_intro_R.html">Představení R</a>
-    </li>
-    <li>
-      <a href="02_install_R.html">Instalace R, R studia a tidyverse</a>
-    </li>
-    <li>
-      <a href="03_objects_functions.html">Objekty, proměnné a funkce</a>
-    </li>
-    <li>
-      <a href="04_import_export.html">Import a export dat</a>
-    </li>
-    <li>
-      <a href="05_dataframe_manipulation.html">Prohlížení a manipulce s dataframem</a>
-    </li>
-    <li>
-      <a href="06_variables_mutate_summarise.html">Manipulace a sumarizace proměnných</a>
-    </li>
-    <li>
-      <a href="07_factors.html">Práce s faktory</a>
-    </li>
-    <li>
-      <a href="08_data_visualization.html">Vytváření grafů</a>
-    </li>
-    <li>
-      <a href="09_plot_format.html">Vzhled grafů</a>
-    </li>
-    <li>
-      <a href="10_strings.html">Práce se stringy</a>
-    </li>
-  </ul>
+        <li>
+  <a href="https://sociology-fa-cu.github.io/uvod-do-r-kniha/">Materiály k přednáškám</a>
 </li>
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Domácí úkoly
      
     <span class="caret"></span>
@@ -343,16 +311,34 @@ $(document).ready(function () {
 </div>
 
 
-<p>Pro doplnění a rozšíření znalostí je možné využít následující publikce. Všechny publikace jsou volně šiřitelné:</p>
-<p><a href="https://r4ds.had.co.nz/"><strong>R for Data Science</strong></a> (Grolemund G. &amp; Wickham H.) - Základní učebnice R, točící se kolem balíčků Tidyverse. Pokrývá důležité aspekty analýzy dat.</p>
-<p><a href="https://ggplot2-book.org/"><strong>ggplot2: Elegant Graphics for Data Analysis</strong></a> (Wickham H.) - Učebnice zaměřená na vizualizaci dat pomocí balíčku ggplot2.</p>
-<p><a href="https://adv-r.hadley.nz/"><strong>Advanced R</strong></a> (Wickham H.) - Učebnice osvětlující vnitřní fungování R jako programovacího jazyka. Pro vážnější zájemce o programování.</p>
-<p>Kromě knih je možné využít ještě <a href="https://rstudio.com/resources/cheatsheets/">taháky od společnosti Rstudio</a>, které poskytují přehled nejvyužívanějších funkcí. Pro tento kurz se hodí zejména následující:</p>
+<p>Pro doplnění a rozšíření znalostí je možné využít následující
+publikce. Všechny publikace jsou volně šiřitelné:</p>
+<p><a href="https://r4ds.had.co.nz/"><strong>R for Data
+Science</strong></a> (Grolemund G. &amp; Wickham H.) - Základní učebnice
+R, točící se kolem balíčků Tidyverse. Pokrývá důležité aspekty analýzy
+dat.</p>
+<p><a href="https://ggplot2-book.org/"><strong>ggplot2: Elegant Graphics
+for Data Analysis</strong></a> (Wickham H.) - Učebnice zaměřená na
+vizualizaci dat pomocí balíčku ggplot2.</p>
+<p><a href="https://adv-r.hadley.nz/"><strong>Advanced R</strong></a>
+(Wickham H.) - Učebnice osvětlující vnitřní fungování R jako
+programovacího jazyka. Pro vážnější zájemce o programování.</p>
+<p>Kromě knih je možné využít ještě <a
+href="https://rstudio.com/resources/cheatsheets/">taháky od společnosti
+Rstudio</a>, které poskytují přehled nejvyužívanějších funkcí. Pro tento
+kurz se hodí zejména následující:</p>
 <ul>
-<li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/master/data-visualization-2.1.pdf">Rstudio</a></li>
-<li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/master/data-import.pdf">Data Import</a></li>
-<li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/master/data-transformation.pdf">Data Transformation</a></li>
-<li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/master/data-visualization-2.1.pdf">Data Visualization</a></li>
+<li><a
+href="https://raw.githubusercontent.com/rstudio/cheatsheets/master/data-visualization-2.1.pdf">Rstudio</a></li>
+<li><a
+href="https://raw.githubusercontent.com/rstudio/cheatsheets/master/data-import.pdf">Data
+Import</a></li>
+<li><a
+href="https://raw.githubusercontent.com/rstudio/cheatsheets/master/data-transformation.pdf">Data
+Transformation</a></li>
+<li><a
+href="https://raw.githubusercontent.com/rstudio/cheatsheets/master/data-visualization-2.1.pdf">Data
+Visualization</a></li>
 </ul>
 
 
