--- a/06_d_variables_mutate_summarise_homework.html
+++ b/06_d_variables_mutate_summarise_homework.html
@@ -13,7 +13,7 @@
 
 <title>Transformace a sumarizace proměnných 3 - Domácí úkoly</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/united.min.css" rel="stylesheet" />
@@ -58,6 +58,7 @@ if (window.hljs) {
 
 
 
+
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
 
@@ -82,6 +83,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -237,7 +241,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -246,47 +250,11 @@ $(document).ready(function () {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-    Materiály k přednáškám
-     
-    <span class="caret"></span>
-  </a>
-  <ul class="dropdown-menu" role="menu">
-    <li>
-      <a href="01_intro_R.html">Představení R</a>
-    </li>
-    <li>
-      <a href="02_install_R.html">Instalace R, R studia a tidyverse</a>
-    </li>
-    <li>
-      <a href="03_objects_functions.html">Objekty, proměnné a funkce</a>
-    </li>
-    <li>
-      <a href="04_import_export.html">Import a export dat</a>
-    </li>
-    <li>
-      <a href="05_dataframe_manipulation.html">Prohlížení a manipulce s dataframem</a>
-    </li>
-    <li>
-      <a href="06_variables_mutate_summarise.html">Manipulace a sumarizace proměnných</a>
-    </li>
-    <li>
-      <a href="07_factors.html">Práce s faktory</a>
-    </li>
-    <li>
-      <a href="08_data_visualization.html">Vytváření grafů</a>
-    </li>
-    <li>
-      <a href="09_plot_format.html">Vzhled grafů</a>
-    </li>
-    <li>
-      <a href="10_strings.html">Práce se stringy</a>
-    </li>
-  </ul>
+        <li>
+  <a href="https://sociology-fa-cu.github.io/uvod-do-r-kniha/">Materiály k přednáškám</a>
 </li>
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Domácí úkoly
      
     <span class="caret"></span>
@@ -341,7 +309,7 @@ $(document).ready(function () {
 <div id="header">
 
 <div class="btn-group pull-right float-right">
-<button type="button" class="btn btn-default btn-xs btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
+<button type="button" class="btn btn-default btn-xs btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
 <ul class="dropdown-menu dropdown-menu-right" style="min-width: 50px;">
 <li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
 <li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
@@ -350,14 +318,17 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Transformace a sumarizace proměnných 3 - Domácí úkoly</h1>
+<h1 class="title toc-ignore">Transformace a sumarizace proměnných 3 -
+Domácí úkoly</h1>
 
 </div>
 
 
 <div id="úkol" class="section level3">
 <h3>1. úkol</h3>
-<p>Najděte pro proměnné uni_prc a poverty_risk následující hodnoty - median, mezikvartilové rozpětí, rozptyl (některé funkce možná budete muset dohledat).</p>
+<p>Najděte pro proměnné uni_prc a poverty_risk následující hodnoty -
+median, mezikvartilové rozpětí, rozptyl (některé funkce možná budete
+muset dohledat).</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>countries %&gt;% 
   summarise(across(c(&quot;uni_prc&quot;, &quot;poverty_risk&quot;),
@@ -366,7 +337,12 @@ $(document).ready(function () {
 </div>
 <div id="úkol-1" class="section level3">
 <h3>2. úkol</h3>
-<p>Napište funkci, která pro proměnnou di_cat vrátí počet unikátních hodnot, kterých proměnná nabývá. Poradíme, že sumarizační funkce, kterou potřeujete, se jmenuje n_distinct (více lze dohledat v nápovědě). Pozor, nejprve odfiltrujte chybějící hodnoty, jinak to jako jednu unikátní hodnotu započítá i NA (což může být v některých situacích žádoucí, ale v tomto úkolu NA odstraňte).</p>
+<p>Napište funkci, která pro proměnnou di_cat vrátí počet unikátních
+hodnot, kterých proměnná nabývá. Poradíme, že sumarizační funkce, kterou
+potřeujete, se jmenuje n_distinct (více lze dohledat v nápovědě). Pozor,
+nejprve odfiltrujte chybějící hodnoty, jinak to jako jednu unikátní
+hodnotu započítá i NA (což může být v některých situacích žádoucí, ale v
+tomto úkolu NA odstraňte).</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>countries %&gt;%
   filter(!is.na(di_cat)) %&gt;% 
@@ -374,7 +350,8 @@ $(document).ready(function () {
 </div>
 <div id="úkol-2" class="section level3">
 <h3>3. úkol</h3>
-<p>Najděte, které tři unikátní hodnoty to jsou. Způsobů řešení je určitě celá řada.</p>
+<p>Najděte, které tři unikátní hodnoty to jsou. Způsobů řešení je určitě
+celá řada.</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>countries %&gt;% 
   count(di_cat) %&gt;% 
@@ -383,7 +360,12 @@ $(document).ready(function () {
 </div>
 <div id="úkol-3" class="section level3">
 <h3>4. úkol</h3>
-<p>Pro všechny numerické proměnné v datasetu kromě proměnné X vraťte následující hodnoty: minimum, median, mean, maximum, sd, IQR, var. Výsledný objekt přetvořte do dlouhého formátu (dva sloupce) tak, že názvy funkcí budou pojmenovány descriptive_stats a samotné hodnoty budou pojmenovány results. Výsledek uložte do svého prostředí (environment) jako nový objekt s názvem descriptives</p>
+<p>Pro všechny numerické proměnné v datasetu kromě proměnné X vraťte
+následující hodnoty: minimum, median, mean, maximum, sd, IQR, var.
+Výsledný objekt přetvořte do dlouhého formátu (dva sloupce) tak, že
+názvy funkcí budou pojmenovány descriptive_stats a samotné hodnoty budou
+pojmenovány results. Výsledek uložte do svého prostředí (environment)
+jako nový objekt s názvem descriptives</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>descriptives &lt;-
   countries %&gt;% 
@@ -396,7 +378,9 @@ $(document).ready(function () {
 </div>
 <div id="úkol-4" class="section level3">
 <h3>5. úkol</h3>
-<p>Pro proměnné dem_index a life_exp vyjádřete jejich minimum, median a maximum v rámci podskupin dle toho, jaké je v zemi hlavní náboženství. Výsledný objekt uložte do environment jako stats_by_relig</p>
+<p>Pro proměnné dem_index a life_exp vyjádřete jejich minimum, median a
+maximum v rámci podskupin dle toho, jaké je v zemi hlavní náboženství.
+Výsledný objekt uložte do environment jako stats_by_relig</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>stats_by_relig &lt;-
 countries %&gt;% 
@@ -407,7 +391,10 @@ countries %&gt;%
 </div>
 <div id="úkol-5" class="section level3">
 <h3>6. úkol</h3>
-<p>Nový objekt stats_by_relig transformujte do dlouhého formátu. Pozor, na rozdíl od situací, se kterými jsme se už setkali, je zde přítomen popisný sloupec maj_belief (popisuje skupinu), který neobsahuje hodoty - ten proto musíte z argumentu cols funkce pivot_longer vyjmout.</p>
+<p>Nový objekt stats_by_relig transformujte do dlouhého formátu. Pozor,
+na rozdíl od situací, se kterými jsme se už setkali, je zde přítomen
+popisný sloupec maj_belief (popisuje skupinu), který neobsahuje hodoty -
+ten proto musíte z argumentu cols funkce pivot_longer vyjmout.</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>stats_by_relig %&gt;% pivot_longer(cols = !maj_belief)</code></pre>
 </div>
