--- a/07_factors_homework.html
+++ b/07_factors_homework.html
@@ -13,7 +13,7 @@
 
 <title>Práce s faktory v balíku forcats - Domácí úkoly</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/united.min.css" rel="stylesheet" />
@@ -58,6 +58,7 @@ if (window.hljs) {
 
 
 
+
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
 
@@ -82,6 +83,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -237,7 +241,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -246,47 +250,11 @@ $(document).ready(function () {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-    Materiály k přednáškám
-     
-    <span class="caret"></span>
-  </a>
-  <ul class="dropdown-menu" role="menu">
-    <li>
-      <a href="01_intro_R.html">Představení R</a>
-    </li>
-    <li>
-      <a href="02_install_R.html">Instalace R, R studia a tidyverse</a>
-    </li>
-    <li>
-      <a href="03_objects_functions.html">Objekty, proměnné a funkce</a>
-    </li>
-    <li>
-      <a href="04_import_export.html">Import a export dat</a>
-    </li>
-    <li>
-      <a href="05_dataframe_manipulation.html">Prohlížení a manipulce s dataframem</a>
-    </li>
-    <li>
-      <a href="06_variables_mutate_summarise.html">Manipulace a sumarizace proměnných</a>
-    </li>
-    <li>
-      <a href="07_factors.html">Práce s faktory</a>
-    </li>
-    <li>
-      <a href="08_data_visualization.html">Vytváření grafů</a>
-    </li>
-    <li>
-      <a href="09_plot_format.html">Vzhled grafů</a>
-    </li>
-    <li>
-      <a href="10_strings.html">Práce se stringy</a>
-    </li>
-  </ul>
+        <li>
+  <a href="https://sociology-fa-cu.github.io/uvod-do-r-kniha/">Materiály k přednáškám</a>
 </li>
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Domácí úkoly
      
     <span class="caret"></span>
@@ -341,7 +309,7 @@ $(document).ready(function () {
 <div id="header">
 
 <div class="btn-group pull-right float-right">
-<button type="button" class="btn btn-default btn-xs btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
+<button type="button" class="btn btn-default btn-xs btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
 <ul class="dropdown-menu dropdown-menu-right" style="min-width: 50px;">
 <li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
 <li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
@@ -350,14 +318,16 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Práce s faktory v balíku forcats - Domácí úkoly</h1>
+<h1 class="title toc-ignore">Práce s faktory v balíku forcats - Domácí
+úkoly</h1>
 
 </div>
 
 
 <div id="úkol" class="section level3">
 <h3>1. úkol</h3>
-<p>Převeďte proměnnou di_cat na faktor a změnu uložte do stávajícího objektu countries.</p>
+<p>Převeďte proměnnou di_cat na faktor a změnu uložte do stávajícího
+objektu countries.</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>countries &lt;-
   countries %&gt;% 
@@ -365,7 +335,9 @@ $(document).ready(function () {
 </div>
 <div id="úkol-1" class="section level3">
 <h3>2. úkol</h3>
-<p>Zmeňte pořadí “levels” u nově vytvořeného faktoru di_cat od nejvíce po nejméně demokratickou úroveň a výsledek opět uložte do objektu countries.</p>
+<p>Zmeňte pořadí “levels” u nově vytvořeného faktoru di_cat od nejvíce
+po nejméně demokratickou úroveň a výsledek opět uložte do objektu
+countries.</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>countries &lt;-
   countries %&gt;% 
@@ -373,13 +345,15 @@ $(document).ready(function () {
 </div>
 <div id="úkol-2" class="section level3">
 <h3>3. úkol</h3>
-<p>Na proměnnou di_cat použijte generickou vizualizační funkci plot().</p>
+<p>Na proměnnou di_cat použijte generickou vizualizační funkci
+plot().</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>countries %&gt;% pull(di_cat) %&gt;% plot()</code></pre>
 </div>
 <div id="úkol-3" class="section level3">
 <h3>4. úkol</h3>
-<p>Nyní otočte pořadí levels (z prvního poslední atd.) a podívejte se na rozdíl výsledku pomocí plot().</p>
+<p>Nyní otočte pořadí levels (z prvního poslední atd.) a podívejte se na
+rozdíl výsledku pomocí plot().</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>countries %&gt;% 
   mutate(di_cat = fct_rev(di_cat)) %&gt;% 
@@ -388,7 +362,10 @@ $(document).ready(function () {
 </div>
 <div id="úkol-4" class="section level3">
 <h3>5. úkol</h3>
-<p>Spojte úrovně “Flawed democracy” a “full democracy” do jedné (“democracy”) a zároveň úroveň “Hybrid regime” přejmenujte na “Non-democracy”. A na proměnnou se podívejte pomocí pull, ať se přesvědčíte, že se stalo, co jste chtěli.</p>
+<p>Spojte úrovně “Flawed democracy” a “full democracy” do jedné
+(“democracy”) a zároveň úroveň “Hybrid regime” přejmenujte na
+“Non-democracy”. A na proměnnou se podívejte pomocí pull, ať se
+přesvědčíte, že se stalo, co jste chtěli.</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>countries %&gt;% 
   mutate(di_cat = fct_collapse(di_cat, 
@@ -398,7 +375,8 @@ $(document).ready(function () {
 </div>
 <div id="úkol-5" class="section level3">
 <h3>6. úkol</h3>
-<p>Přidejte do proměnné “di_cat” úroveň (level) s názvem “Mordor”. Výsledek opět zobrazte pomocí plot().</p>
+<p>Přidejte do proměnné “di_cat” úroveň (level) s názvem “Mordor”.
+Výsledek opět zobrazte pomocí plot().</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>countries %&gt;% 
   mutate(di_cat = fct_expand(di_cat, &quot;Mordor&quot;)) %&gt;% 
@@ -406,7 +384,8 @@ $(document).ready(function () {
 </div>
 <div id="úkol-6" class="section level3">
 <h3>7. úkol</h3>
-<p>Změňte pořadí “levels” podle průměrné hodnoty gdp. Na výsledek se podívejte.</p>
+<p>Změňte pořadí “levels” podle průměrné hodnoty gdp. Na výsledek se
+podívejte.</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>countries %&gt;% 
   mutate(di_cat = fct_reorder(.f = di_cat, 
@@ -417,7 +396,8 @@ $(document).ready(function () {
 </div>
 <div id="úkol-7" class="section level3">
 <h3>8. úkol</h3>
-<p>kontrolujte, že průměr gdp jednotlivých podskupin zemí podle faktoru di_cat opravdu odpovídá výsledku výše.</p>
+<p>kontrolujte, že průměr gdp jednotlivých podskupin zemí podle faktoru
+di_cat opravdu odpovídá výsledku výše.</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>countries %&gt;% 
   group_by(di_cat) %&gt;% 
@@ -425,7 +405,8 @@ $(document).ready(function () {
 </div>
 <div id="úkol-8" class="section level3">
 <h3>9. úkol</h3>
-<p>A co pokud byste chtěli úrovně di_cat seřadit podle průměrného pořadí obráceně, tedy sestupně?</p>
+<p>A co pokud byste chtěli úrovně di_cat seřadit podle průměrného pořadí
+obráceně, tedy sestupně?</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>countries %&gt;% 
   mutate(di_cat = fct_reorder(di_cat, gdp, mean, na.rm=TRUE, .desc = TRUE)) %&gt;% 
@@ -433,7 +414,10 @@ $(document).ready(function () {
 </div>
 <div id="úkol-9" class="section level3">
 <h3>10. úkol</h3>
-<p>V R často můžete udělat jednu věci několika způsoby. Pokuste se seřadit úrovně di_cat opět sestupně podle podle gdp, ale bez použití argumentu .desc. Poradíme, že můžete využít kombinaci fct_reorder a fct_rev.</p>
+<p>V R často můžete udělat jednu věci několika způsoby. Pokuste se
+seřadit úrovně di_cat opět sestupně podle podle gdp, ale bez použití
+argumentu .desc. Poradíme, že můžete využít kombinaci fct_reorder a
+fct_rev.</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>countries %&gt;% 
   mutate(di_cat = fct_reorder(di_cat, gdp, mean, na.rm=TRUE),
@@ -442,7 +426,12 @@ $(document).ready(function () {
 </div>
 <div id="úkol-10" class="section level3">
 <h3>11. úkol</h3>
-<p>Vytvořte nový faktor povery_risk_halves, který bude mít hodnotu “lower-half” pro země s ohrožením chudobou nižším než medián, hodnotu “median” pro země (zemi) přesně s mediánovou hodnotou, a hodnotu “upper-half” pro země s ohrožením chudobou větším než medián. Na závěr si vedle sebe prohledněte proměnné proverty_risk a povery_risk_halves, jestli výsledek dává smysl.</p>
+<p>Vytvořte nový faktor povery_risk_halves, který bude mít hodnotu
+“lower-half” pro země s ohrožením chudobou nižším než medián, hodnotu
+“median” pro země (zemi) přesně s mediánovou hodnotou, a hodnotu
+“upper-half” pro země s ohrožením chudobou větším než medián. Na závěr
+si vedle sebe prohledněte proměnné proverty_risk a povery_risk_halves,
+jestli výsledek dává smysl.</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>countries %&gt;% 
   mutate(povery_risk_halves = if_else(poverty_risk &lt; median(poverty_risk, na.rm = TRUE), # zadej podmínku
