--- a/atestation.html
+++ b/atestation.html
@@ -13,7 +13,7 @@
 
 <title>Podmínky atestace</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/united.min.css" rel="stylesheet" />
@@ -57,6 +57,7 @@ if (window.hljs) {
 
 
 
+
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
 
@@ -81,6 +82,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -233,7 +237,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -242,47 +246,11 @@ $(document).ready(function () {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-    Materiály k přednáškám
-     
-    <span class="caret"></span>
-  </a>
-  <ul class="dropdown-menu" role="menu">
-    <li>
-      <a href="01_intro_R.html">Představení R</a>
-    </li>
-    <li>
-      <a href="02_install_R.html">Instalace R, R studia a tidyverse</a>
-    </li>
-    <li>
-      <a href="03_objects_functions.html">Objekty, proměnné a funkce</a>
-    </li>
-    <li>
-      <a href="04_import_export.html">Import a export dat</a>
-    </li>
-    <li>
-      <a href="05_dataframe_manipulation.html">Prohlížení a manipulce s dataframem</a>
-    </li>
-    <li>
-      <a href="06_variables_mutate_summarise.html">Manipulace a sumarizace proměnných</a>
-    </li>
-    <li>
-      <a href="07_factors.html">Práce s faktory</a>
-    </li>
-    <li>
-      <a href="08_data_visualization.html">Vytváření grafů</a>
-    </li>
-    <li>
-      <a href="09_plot_format.html">Vzhled grafů</a>
-    </li>
-    <li>
-      <a href="10_strings.html">Práce se stringy</a>
-    </li>
-  </ul>
+        <li>
+  <a href="https://sociology-fa-cu.github.io/uvod-do-r-kniha/">Materiály k přednáškám</a>
 </li>
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Domácí úkoly
      
     <span class="caret"></span>
@@ -344,17 +312,39 @@ $(document).ready(function () {
 
 
 <p>Pro úspěšné splnění předmětu je nutné splnit následující úkol:</p>
-<p>V červnu roku 2019 provedlo <a href="cvvm.soc.cas.cz/">Centrum pro výzkum veřejného mínění</a> průzkum zaměřený na to, jak veřejnost hodnotí závažnost vybraných celospolečenských hrozeb a připravenost České republiky na ně. Respondenti byly dotazováni na zhruba 26 hrozeb a pro každou z nich určili, jak je podle nich závažná a jak dobře jsme na ni připravení. Celá zpráva s názvem <em>Celospolečenské hrozby podle veřejnosti</em> je k nalezení <a href="https://cvvm.soc.cas.cz/media/com_form2content/documents/c2/a5077/f9/po191223.pdf">zde</a></p>
-<p>Pro získání zápočtu splňte <strong>jedno</strong> z následujících:</p>
+<p>V červnu roku 2019 provedlo <a href="cvvm.soc.cas.cz/">Centrum pro
+výzkum veřejného mínění</a> průzkum zaměřený na to, jak veřejnost
+hodnotí závažnost vybraných celospolečenských hrozeb a připravenost
+České republiky na ně. Respondenti byly dotazováni na zhruba 26 hrozeb a
+pro každou z nich určili, jak je podle nich závažná a jak dobře jsme na
+ni připravení. Celá zpráva s názvem <em>Celospolečenské hrozby podle
+veřejnosti</em> je k nalezení <a
+href="https://cvvm.soc.cas.cz/media/com_form2content/documents/c2/a5077/f9/po191223.pdf">zde</a></p>
+<p>Pro získání zápočtu splňte <strong>jedno</strong> z
+následujících:</p>
 <ol style="list-style-type: decimal">
-<li><p>Replikujte Tabulku 1 a Tabulku 2 ve zprávě. Výsledkem by měli být dva objekty (ideálně dataframy), z nichž každý bude obsahovat čtyři sloupce: <em>Název hrozby</em>, <em>Průměrná hodnota</em>, <em>Směrodatná odchylka</em> a <em>% odpovědí nevím</em>. Pořadí hrozeb by mělo být seřazeno sestupně podle <em>Průměrné hodnoty</em>. Název tabulky ani poznámky pod čarou replikovat nemusíte.</p></li>
-<li><p>Replikujte Graf 1. Drobné odchylky od originálu nevadí (např. odstín barev, font a velikost písma), ale graf by měl obsahovat všechny důležité aspekty, jako popisky os, barevné rozlišení bodů, legendu, atd. Nezapomeňtě ani na název a popis grafu.</p></li>
+<li><p>Replikujte Tabulku 1 a Tabulku 2 ve zprávě. Výsledkem by měli být
+dva objekty (ideálně dataframy), z nichž každý bude obsahovat čtyři
+sloupce: <em>Název hrozby</em>, <em>Průměrná hodnota</em>,
+<em>Směrodatná odchylka</em> a <em>% odpovědí nevím</em>. Pořadí hrozeb
+by mělo být seřazeno sestupně podle <em>Průměrné hodnoty</em>. Název
+tabulky ani poznámky pod čarou replikovat nemusíte.</p></li>
+<li><p>Replikujte Graf 1. Drobné odchylky od originálu nevadí (např.
+odstín barev, font a velikost písma), ale graf by měl obsahovat všechny
+důležité aspekty, jako popisky os, barevné rozlišení bodů, legendu, atd.
+Nezapomeňtě ani na název a popis grafu.</p></li>
 </ol>
-<p>V obou případech odevzdejte skript, který musí být plně funkční, tedy musí proběhnout bez chyby od začátku do konce bez vnějších zásahů.</p>
-<p>Data pro vypracování úkolu jsou k nalezení buď v <a href="https://archiv.soc.cas.cz/">Českém sociálněvědním datovém archivu</a>, nebo ke stažení rovnou <a href="https://github.com/alesvomacka/Uvod_do_analyzy_dat_v_R/raw/master/data/cvvm_cerven_2019.rds">zde</a>.</p>
+<p>V obou případech odevzdejte skript, který musí být plně funkční, tedy
+musí proběhnout bez chyby od začátku do konce bez vnějších zásahů.</p>
+<p>Data pro vypracování úkolu jsou k nalezení buď v <a
+href="https://archiv.soc.cas.cz/">Českém sociálněvědním datovém
+archivu</a>, nebo ke stažení rovnou <a
+href="https://github.com/alesvomacka/Uvod_do_analyzy_dat_v_R/raw/master/data/cvvm_cerven_2019.rds">zde</a>.</p>
 <p>Případně stáhnout rovnou v R pomocí funkce:</p>
 <pre class="r"><code>cvvm = read.csv(&quot;https://raw.githubusercontent.com/alesvomacka/Uvod_do_analyzy_dat_v_R/master/data/cvvm_cerven_2019.csv&quot;)</code></pre>
-<p>Dotazník s popisem otázek je možné stejně jako data stáhout v Datovém archivu, případně <a href="https://raw.githubusercontent.com/alesvomacka/Uvod_do_analyzy_dat_v_R/master/documentation/V1906.pdf">zde</a>.</p>
+<p>Dotazník s popisem otázek je možné stejně jako data stáhout v Datovém
+archivu, případně <a
+href="https://raw.githubusercontent.com/alesvomacka/Uvod_do_analyzy_dat_v_R/master/documentation/V1906.pdf">zde</a>.</p>
 
 
 
